[FIX] board: dashboard darkmode
Steps to reproduce:
- add elements to dashboard
- enter dashboard and enable darkmode

Bug:
titles are unreadable because background is white

Fix:
remove CSS property

closes odoo/odoo#110191

X-original-commit: ddd02cb33e7e1bb08424116e8870f0cd29969973

--- a/addons/board/static/src/board_controller.scss
+++ b/addons/board/static/src/board_controller.scss
@@ -27,10 +27,7 @@
 }
 
 .o-dashboard-action {
-    background-color: white;
     align-self: start;
-    border: 1px solid;
-    border-color: #e5e5e5 #dbdbdb #d2d2d2;
 
     > .o_view_controller {
         padding: 0 12px 12px 12px;
